--- a/css/main.css
+++ b/css/main.css
@@ -294,14 +294,14 @@ input, textarea, select {
     top: 0;
     z-index: 10;
     width: 306px;
-    height: 100vh;
+    height: 100dvh;
 }
 
 .dashboard__inner {
     background-color: var(--clr-white);
     -webkit-box-shadow: 0px 10px 60px rgba(226, 236, 249, 0.5);
     box-shadow: 0px 10px 60px rgba(226, 236, 249, 0.5);
-    height: 100vh;
+    height: 100dvh;
     padding: 36px;
     display: -webkit-box;
     display: -ms-flexbox;
